--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "gulpfile.js",
   "readmeFilename": "README.markdown",
   "devDependencies": {
+    "cheerio": "^0.19.0",
     "del": "^1.2.0",
     "gh-pages": "^0.3.1",
     "gulp": "^3.9.0",
