--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.2.0",
     "gulp-insert": "^0.4.0",
+    "gulp-markdown": "^1.1.0",
     "gulp-marked": "^1.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.4",
